Add ticket feature added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 spring.mvc.async.request-timeout=-1
+
+#account URL
+addURL=http://localhost:7070/ticket/add
+balanceURL=http://localhost:7070/account/balance/
