Error propagated to accounts error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,4 +31,5 @@ spring.mvc.async.request-timeout=-1
 
 #account URL
 addURL=http://localhost:7070/ticket/add
+ticketErrorURL=http://localhost:7070/ticket/error
 balanceURL=http://localhost:7070/account/balance/
