claim successfully redeemed in account

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,4 @@ spring.mvc.async.request-timeout=-1
 addURL=http://localhost:7070/ticket/add
 ticketErrorURL=http://localhost:7070/ticket/error
 balanceURL=http://localhost:7070/account/balance/
+redeemClaimURL=http://localhost:7070/claims
