1. Queue added 2. SSE to Websocket 3. token used for adding ticked and claim 4. Added ResultBean and ResultQueue 5. New HttpRequestService for handling request to other microservices 6. Countdown bean added 7. Queue controller added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
+spring.application.name=game
+spring.cloud.config.uri=http://localhost:8888
+
 spring.datasource.url=jdbc:mysql://localhost:3306/game
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
 
 server.port=9090
 jwksuri=http://localhost:8080/oauth2/jwks
@@ -16,7 +21,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 #spring.jpa.properties.javax.persistence.sharedCache.mode=ENABLE_SELECTIVE
 
-countdown=120
+countdown=30
 initcount=-30
 
 #Spring mail
@@ -30,7 +35,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mvc.async.request-timeout=-1
 
 #account URL
-addURL=http://localhost:7070/ticket/add
+addURL=http://account-server/ticket/add
 ticketErrorURL=http://localhost:7070/ticket/error
-balanceURL=http://localhost:7070/account/balance/
-redeemClaimURL=http://localhost:7070/claims
+balanceURL=http://account-server/account/balance/
+redeemClaimURL=http://account-server/claims
